Change Q to Y inside expectation of Y~Q.

--- a/lectures/calibration/calibration.tex
+++ b/lectures/calibration/calibration.tex
@@ -117,7 +117,7 @@ with a lower average score suggesting a better forecaster.
 In general, we use the notation $S(P, Q)$ to denote the expectation of the score
 over draws $Y \sim Q$,  
 \[
-S(P, Q) = \E_{Y \sim Q} [S(P, Q)] = \int S(P, y) \, dQ(y).
+S(P, Q) = \E_{Y \sim Q} [S(P, Y)] = \int S(P, y) \, dQ(y).
 \]
 
 \subsection{Proper scores}
