PIT over/underdispersion
- Had the directions flipped in motivating the definitions

--- a/lectures/calibration/calibration.tex
+++ b/lectures/calibration/calibration.tex
@@ -628,11 +628,11 @@ of the time, and so on, for all probability levels.
 
 \paragraph{Dispersion: over and under.}
 
-If $F$ places too much mass in the tails, then the PIT $F^*(Y)$ will be
+If $F$ places too little mass in the tails, then the PIT $F^*(Y)$ will be
 U-shaped, and its variance will be large compared to that of a uniform
-distribution. Conversely, if $F$ places insufficient mass in the tails, then the 
-PIT $F^*(Y)$ will be upside-down U-shaped, and its variance will be comparably
-small. 
+distribution. Conversely, if $F$ places too much mass in the tails, then the PIT
+$F^*(Y)$ will be upside-down U-shaped, and its variance will be comparably
+small.
 
 Recalling that we use $U \sim \mathrm{Unif}(0,1)$ to denote a standard uniform
 random variable, this leads us to the following definitions, in the context of
