Fix eq reference

--- a/lectures/conformal/conformal.tex
+++ b/lectures/conformal/conformal.tex
@@ -706,7 +706,7 @@ summarize these below.
 \end{align}
 
 \item We can always inject auxiliary randomness in order to obtain coverage
-  exactly $1-\alpha$ in \eqref{eq:cset_full}.
+  exactly $1-\alpha$ in \eqref{eq:coverage_full}.
 \end{itemize}
 
 \subsection{Remarks}
