Fix typo: \beta_0 -> \beta

--- a/lectures/lasso/lasso.tex
+++ b/lectures/lasso/lasso.tex
@@ -438,13 +438,13 @@ vector $\beta \in \R^d$,
 \]
 Rearranging, 
 \[
-\|Y - X\hbeta\|_2^2 - \|Y - X\beta\|_2^2 \leq \lambda (\|\beta_0\|_1 -
+\|Y - X\hbeta\|_2^2 - \|Y - X\beta\|_2^2 \leq \lambda (\|\beta\|_1 -
 \|\hbeta\|_1).  
 \]
 Adding and subtracting $X\beta$ in the leftmost term, and expanding, we get  
 \[
 \|X\hbeta - X\beta\|_2^2 \leq 2 \langle Y-X\beta, X\hbeta - X\beta \rangle + 
-\lambda (\|\beta_0\|_1 - \|\hbeta\|_1). 
+\lambda (\|\beta\|_1 - \|\hbeta\|_1).
 \]
 where we have moved the inner product term to the right-hand side. This is true
 for any vector $\beta$. Taking $\beta = \beta_0$ in particular, the true
