--- a/lectures/conformal/conformal.tex
+++ b/lectures/conformal/conformal.tex
@@ -241,8 +241,7 @@ prediction set for $Y_{n+1}$ based on $X_{n+1}$. Suppose that \smash{$\hf_n$} is
 any point predictor, trained on $(X_i,Y_i)$, $i=1,\dots,n$, such that (to put it 
 informally)  
 \[
-\text{$\hf_n(x)$ is a prediction for the value of $y$ that we would expect to
-  see at $x$.}  
+\text{$\hf_n(x)$ predicts the value of $y$ that we expect to see at $x$.}  
 \]
 Then we could proceed naively as follows. We define (absolute) residuals made on 
 the training set,     
