--- a/lectures/conformal_ds/conformal_ds.tex
+++ b/lectures/conformal_ds/conformal_ds.tex
@@ -553,8 +553,8 @@ Y_i|X_i \sim P_{Y|X}, \; \text{independently, for $i=1,\dots,n+1$}.
 \end{gather*}
 Let $\lambda$ denote the density (or mass function, or more generally,
 Radom-Nikodym derivative with respect to an arbitrary base measure) of
-$Q$. Define a weighted conformal set (based on the first $n$ samples) at a point
-$x \in \cX$, with nominal error level $\alpha \in (0,1)$, by   
+$\Lambda$. Define a weighted conformal set (based on the first $n$ samples) at a
+point $x \in \cX$, with nominal error level $\alpha \in (0,1)$, by   
 \begin{equation}
 \label{eq:weighted_conf_str}
 \hC^\lambda_n(x) = \bigg\{ y : R_{n+1}^{(x,y)} \leq \Quantile\bigg( 1-\alpha;  
