--- a/lectures/calibration/calibration.tex
+++ b/lectures/calibration/calibration.tex
@@ -300,7 +300,8 @@ Weighted interval score (and thus interval score, as effectively a special case)
 is a proper score for predicting the quantiles at levels $\alpha/2$ and
 $1-\alpha/2$, over $\alpha \in \cA$. To be clear, here we say (by analogy to 
 \eqref{eq:proper}) that a score $S$ defined in terms of a discrete set of
-predicted quantiles \smash{$\{q_\tau\}_{\tau \in \cT}$} is proper if it holds that   
+predicted quantiles \smash{$\{q_\tau\}_{\tau \in \cT}$} is proper if it holds
+that    
 \begin{equation}
 \label{eq:proper_q}
 S \big( \{q_\tau\}_{\tau \in \cT}, \, F \big) \geq S \big(
@@ -397,7 +398,8 @@ $x \mapsto 1\{y \leq x\}$ is indeed the delta function $\delta_y$. Thus we have
 \end{align*}
 The second subtlety is to show that the first term above is indeed zero.  
 This is really a question of how fast the tails of $F$ decay. As $F$ yields an
-expectation, note that we must have $1-F(x) \lesssim x^{-1}$ (by Markov's inequality). Hence   
+expectation, note that we must have $1-F(x) \lesssim x^{-1}$ (by Markov's
+inequality). Hence    
 \[
 (1-F(x))^2 x \lesssim x^{-1} \to 0 \quad \text{as $x \to \infty$},
 \]
@@ -608,8 +610,8 @@ where recall $F^*(Y)$ is defined as in \eqref{eq:pit}, and $U \sim
 \emph{random}. Another name for probabilistic calibration is \emph{PIT
   calibration}, and another way of writing \eqref{eq:prob_calib} is  
 \[
-\P\Big( V \cdot F(Y) + (1-V) \cdot F(Y^-) \leq \tau \Big) = \tau, \quad \text{for all
-  $\tau \in [0,1]$}, 
+\P\Big( V \cdot F(Y) + (1-V) \cdot F(Y^-) \leq \tau \Big) = \tau, \quad
+\text{for all $\tau \in [0,1]$}, 
 \]
 for $V \sim \mathrm{Unif}(0,1)$, independent of $F$ and $Y$, which is typically
 how you will see it defined. 
@@ -1127,8 +1129,8 @@ earlier result from \citet{ranjan2010combining}.
 
 \subsection{Marginal calibration, probability average}
 
-Now we move to the case where each forecaster is marginally calibrated, and still
-consider a probability average. The next result is very simple but 
+Now we move to the case where each forecaster is marginally calibrated, and
+still consider a probability average. The next result is very simple but 
 noting, and once again emphasizes the differences between marginal and
 probabilistic calibration. 
 
